# bs1770gain

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  bs1770gain_0.1.0.orig.tar.gz.delta  bs1770gain_0.1.0.orig.tar.gz.id  bs1770gain_0.1.1.orig.tar.gz.delta  bs1770gain_0.1.1.orig.tar.gz.id  bs1770gain_0.2.0.orig.tar.gz.delta  bs1770gain_0.2.0.orig.tar.gz.id  bs1770gain_0.2.1.orig.tar.gz.delta  bs1770gain_0.2.1.orig.tar.gz.id  bs1770gain_0.3.0.orig.tar.gz.delta  bs1770gain_0.3.0.orig.tar.gz.id  bs1770gain_0.3.1.orig.tar.gz.delta  bs1770gain_0.3.1.orig.tar.gz.id  bs1770gain_0.3.2.orig.tar.gz.delta  bs1770gain_0.3.2.orig.tar.gz.id  bs1770gain_0.4.0.orig.tar.gz.delta  bs1770gain_0.4.0.orig.tar.gz.id  bs1770gain_0.4.1.orig.tar.gz.delta  bs1770gain_0.4.1.orig.tar.gz.id  bs1770gain_0.4.10.orig.tar.gz.delta  bs1770gain_0.4.10.orig.tar.gz.id  bs1770gain_0.4.11.orig.tar.gz.delta  bs1770gain_0.4.11.orig.tar.gz.id  bs1770gain_0.4.12.orig.tar.gz.delta  bs1770gain_0.4.12.orig.tar.gz.id  bs1770gain_0.4.2.orig.tar.gz.delta  bs1770gain_0.4.2.orig.tar.gz.id  bs1770gain_0.4.3.orig.tar.gz.delta  bs1770gain_0.4.3.orig.tar.gz.id  bs1770gain_0.4.3~beta3.orig.tar.gz.delta  bs1770gain_0.4.3~beta3.orig.tar.gz.id  bs1770gain_0.4.4.orig.tar.gz.delta  bs1770gain_0.4.4.orig.tar.gz.id  bs1770gain_0.4.5.orig.tar.gz.delta  bs1770gain_0.4.5.orig.tar.gz.id  (+26 more)
autom4te.cache/: output.0  requests  traces.0  traces.1
bs1770gain/: Makefile  Makefile.am  Makefile.in  bs1770gain.c  bs1770gain.h  bs1770gain_aggregate.c  bs1770gain_album.c  bs1770gain_audiostream.c  bs1770gain_basename.c  bs1770gain_convert.c  bs1770gain_copy_file.c  bs1770gain_csv2avdict.c  bs1770gain_dynload.c  bs1770gain_dynload.h  bs1770gain_find_decoder.c  bs1770gain_oor.c  bs1770gain_opath.c  bs1770gain_parse_time.c  bs1770gain_path3.c  bs1770gain_print_classic.c  bs1770gain_print_xml.c  bs1770gain_priv.h  bs1770gain_read.c  bs1770gain_s2w.c  bs1770gain_same_file.c  bs1770gain_seek.c  bs1770gain_sink.c  bs1770gain_sox.c  bs1770gain_stats.c  bs1770gain_stream.c  bs1770gain_strtok.c  bs1770gain_transcode.c  bs1770gain_tree.c  configure  homegrown.makefile  homegrown.sources.mak  version.mak
bs1770gain/doc/: .index.html.swp  index.html  index.html.01  index.html.02  index.html.03
bs1770gain/doc/css/: styles.css
debian/: bs1770gain.install  bs1770gain.manpages  bs1770gain.txtman  changelog  control  copyright  rules  watch
debian/patches/: 01-libpbutil.diff  02-bs1770gain-0.4.2.diff  10-remove-makefile.diff  10-unsigned-char-archs.diff  1000-fix-typo-in-help-entry.patch  1010-ignore-autoreconf-errors.patch  11-autotools.diff  12-ffmpeg-av-lib.diff  20-audio-decode-problem.diff  20-memleak-album.diff  21-accesss-freed-mem.diff  22-disable-dynload.diff  23-memleak.diff  30-link-math-lib.diff  30-strict-cast-align.diff  series
debian/source/: include-binaries
debian/tests/: control  test-cmd-tool
examples/: Makefile  ffmpeg1770.c  sndfile1770.c  version.mak
lib1770-2/: Makefile  Makefile.am  Makefile.in  homegrown.makefile  lib1770.h  lib1770_biquad.c  lib1770_block.c  lib1770_pre.c  lib1770_stats.c  version.mak
libffsox-2/: Makefile  Makefile.am  Makefile.in  Makefile.in.X  ffsox.c  ffsox.h  ffsox_aggregate.c  ffsox_analyze.c  ffsox_audio_player.c  ffsox_audiostream.c  ffsox_av_time_base_q.c  ffsox_basename.c  ffsox_collect.c  ffsox_convert.c  ffsox_csv2avdict.c  ffsox_dynload.c  ffsox_dynload.h  ffsox_dynload2.c  ffsox_dynload_trace.c  ffsox_engine.c  ffsox_filter.c  ffsox_find_decoder.c  ffsox_frame.c  ffsox_frame_consumer.c  ffsox_frame_convert.c  ffsox_frame_convert_sox.c  ffsox_frame_reader.c  ffsox_frame_writer.c  ffsox_list.c  ffsox_machine.c  ffsox_msvcrt.c  ffsox_node.c  ffsox_packet_consumer.c  ffsox_packet_consumer_list.c  ffsox_packet_writer.c  ffsox_path3.c  ffsox_priv.h  ffsox_read.c  ffsox_read_copy.c  ffsox_read_decode.c  (+23 more)
libpbutil/: Makefile  Makefile.am  Makefile.in  configure  homegrown.configure  homegrown.makefile  homegrown.makefile.X  pbu_basename.c  pbu_copy_file.c  pbu_ext.c  pbu_extend_path.c  pbu_list.c  pbu_malloc.c  pbu_mkdir.c  pbu_msvcrt.c  pbu_s2w.c  pbu_same_file.c  pbu_strtok.c  pbu_trace.c  pbu_vwritelna.c  pbu_vwritelnw.c  pbu_w2s.c  pbu_wcstok.c  pbutil.h  pbutil.h.X  pbutil_priv.h  version.mak
